--- a/package.json
+++ b/package.json
@@ -17,10 +17,18 @@
   },
   "homepage": "https://github.com/sozialpalast/gaso-website#readme",
   "dependencies": {
+    "connect-redis": "^5.1.0",
     "crypto": "^1.0.1",
+    "dompurify": "^2.2.7",
     "express": "^4.17.1",
     "express-session": "^1.17.1",
     "handlebars": "^4.7.7",
+    "helper-markdown": "^1.0.0",
+    "mariadb": "^2.5.3",
+    "marked": "^2.0.1",
+    "moment": "^2.29.1",
+    "redis": "^3.0.2",
+    "sanitize-html": "^2.3.2",
     "sequelize": "^6.5.0",
     "sqlite3": "^5.0.2"
   }
